wifi: Update WPA3 support overlay config for legacy devices
Set WPA3 support overlay config to false for unsupported legacy chipsets.

CRs-Fixed: 2452947
Change-Id: Id56f553b05346828186d5327a7fc57d99472f9da

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -41,4 +41,7 @@
 
    <!-- Device supports Sustained Performance Mode-->
    <bool name="config_sustainedPerformanceModeSupported">true</bool>
+
+   <!-- Enable WPA3 support -->
+   <bool translatable="false" name="config_wifi_wpa3_supported">false</bool>
 </resources>
